// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSomeoneScreen next renders without back button correctly 1`] = `
<AddSomeoneScreen
  dispatch={[Function]}
  logoutOnBack={true}
  next={[Function]}
/>
`;

exports[`AddStepScreen next renders correctly 1`] = `
<AddStepScreen
  dispatch={[Function]}
  myId="123"
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "orgId": "personal",
          "personId": "321",
          "type": "createStep",
        },
      },
    }
  }
  next={[Function]}
/>
`;

exports[`CelebrationScreen next renders correctly 1`] = `
<CelebrationScreen
  dispatch={[Function]}
  navigation={
    Object {
      "state": Object {
        "params": Object {},
      },
    }
  }
  next={[Function]}
/>
`;

exports[`PersonSelectStepScreen next renders correctly 1`] = `
<PersonSelectStepScreen
  contactName="Someone"
  contactStage={
    Object {
      "id": "3",
    }
  }
  dispatch={[Function]}
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "contactId": "321",
          "contactName": "Someone",
          "contactStage": Object {
            "id": "3",
          },
          "orgId": "123",
        },
      },
    }
  }
  next={[Function]}
  organization={
    Object {
      "id": "123",
    }
  }
/>
`;

exports[`SelectStageScreen renders correctly 1`] = `
<SelectStageScreen
  dispatch={[Function]}
  isMe={false}
  myId="123"
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "section": "onboarding",
          "subsection": "add person",
        },
      },
    }
  }
  next={[Function]}
  stages={Array []}
/>
`;

exports[`SetupPersonScreen next renders correctly 1`] = `
<SetupScreen
  dispatch={[Function]}
  isMe={false}
  loadedFirstName="Someone"
  next={[Function]}
  personId="321"
/>
`;

exports[`SuggestedStepDetailScreen next renders correctly 1`] = `
<SuggestedStepDetailScreen
  dispatch={[Function]}
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "orgId": "personal",
          "personId": "123",
          "step": Object {
            "id": "111",
          },
        },
      },
    }
  }
  next={[Function]}
/>
`;
